<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_background_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".control.FormLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="191dp"
        android:layout_height="128.12dp"
        android:layout_marginTop="164dp"
        android:orientation="vertical"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <EditText
        android:id="@+id/username"
        android:layout_width="275.94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156.5dp"
        android:foregroundTint="@color/red"
        android:hint="@string/email"
        android:textSize="10.7dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/red"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="275.94dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="211.35dp"
        android:foregroundTint="@color/red"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:textSize="10.7dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/red"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo" />

    <Button
        android:id="@+id/login"
        style="@style/Edit_button_1"
        android:layout_width="277dp"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_marginTop="28.538dp"
        android:enabled="true"
        android:text="@string/confirm_button"
        android:textAllCaps="false"
        android:onClick="login"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/register"
        android:layout_width="206dp"
        android:layout_height="29dp"
        android:layout_marginTop="34dp"
        android:textAlignment="center"
        android:textSize="10.7dp"
        android:textColor="@color/white"
        android:text="@string/register_account"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login"
        />


</androidx.constraintlayout.widget.ConstraintLayout>